# rsiprtp

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LICENSE-APACHE  README.md  SECURITY.md  deny.toml  fuzz_overnight.ps1  fuzz_overnight_parallel.ps1
.cargo/: audit.toml
.github/: PULL_REQUEST_TEMPLATE.md
crates/gabby/: Cargo.toml  README.md  build.rs  gabby.example.toml
crates/gabby/scripts/: linphone_setup.md  setup.sh
crates/gabby/src/: audio.rs  call.rs  config.rs  main.rs  server.rs
crates/gabby/src/pipeline/: llm.rs  mod.rs  stt.rs  tts.rs  vad.rs
crates/gabby/tests/: media_branch_coverage.rs
crates/mdsiprtp/: Cargo.toml
crates/mdsiprtp-rtp/: Cargo.toml
crates/mdsiprtp-rtp/src/: dtmf.rs  lib.rs  packet.rs  rtcp.rs  session.rs
crates/mdsiprtp-rtp/src/tests/: mod.rs  rfc3550.rs
crates/mdsiprtp-sip/: Cargo.toml
crates/mdsiprtp-sip/src/: auth.rs  headers.rs  lib.rs  message.rs  uri.rs
crates/mdsiprtp-sip/src/tests/: mod.rs  rfc3261.rs
crates/mdsiprtp-srtp/: Cargo.toml
crates/mdsiprtp-srtp/src/: context.rs  dtls.rs  kdf.rs  lib.rs  sdes.rs
crates/mdsiprtp-transaction/: Cargo.toml
crates/mdsiprtp-transaction/src/: lib.rs  manager.rs
crates/mdsiprtp-transaction/src/client/: invite.rs  non_invite.rs
crates/mdsiprtp-transaction/src/server/: invite.rs  non_invite.rs
crates/mdsiprtp-transaction/src/tests/: mod.rs  rfc3261_state_machines.rs
crates/mdsiprtp/examples/: voicemail.rs
crates/mdsiprtp/tests/: asterisk_integration.rs  baresip_integration.rs  concurrency_safety.rs  coverage_instantiations.rs  fault_handling.rs  integration_advanced.rs  integration_basic_calls.rs  integration_resilience.rs  security_input_validation.rs  stack_to_stack.rs
crates/mdsiprtp/tests/baresip_integration/framework/: assertions.rs  asterisk.rs  baresip.rs  config.rs  media_validator.rs  mod.rs  sip_endpoint.rs
crates/mdsiprtp/tests/baresip_integration/scenarios/: basic_call.rs  call_hold.rs  call_transfer.rs  codec_nego.rs  dtmf.rs  endpoint_to_endpoint.rs  error_recovery.rs  media_audio.rs  mod.rs  registration.rs  registration_advanced.rs  security.rs  stress.rs
crates/mdsiprtp/tests/stack_instance/: mod.rs
crates/rsiprtp/: Cargo.toml  LICENSE-MIT  public-api.txt
crates/rsiprtp-core/: Cargo.toml
crates/rsiprtp-core/src/: error.rs  lib.rs
crates/rsiprtp-dialog/: Cargo.toml
crates/rsiprtp-dialog/src/: lib.rs
crates/rsiprtp-ice/: Cargo.toml
crates/rsiprtp-ice/src/: agent.rs  candidate.rs  lib.rs  stun.rs  turn.rs
crates/rsiprtp-media/: Cargo.toml
crates/rsiprtp-media/src/: lib.rs
crates/rsiprtp-rtp/: Cargo.toml
crates/rsiprtp-rtp/src/: dtmf.rs  lib.rs  packet.rs
crates/rsiprtp-sip/: Cargo.toml
crates/rsiprtp-sip/fuzz/: Cargo.toml  README.md
crates/rsiprtp-sip/fuzz/fuzz_targets/: parse_sip_message.rs
crates/rsiprtp-sip/src/: lib.rs  message.rs
crates/rsiprtp-transaction/: Cargo.toml
crates/rsiprtp-transaction/src/: lib.rs  manager.rs
crates/rsiprtp-transport/: Cargo.toml
crates/rsiprtp-transport/src/: lib.rs  tcp.rs  tls.rs  udp.rs
crates/rsiprtp/examples/: basic_call.rs  session_timers.rs
crates/rsiprtp/src/: lib.rs
crates/rsiprtp/src/dialog/: invite.rs
crates/rsiprtp/src/ice/: agent.rs
crates/rsiprtp/src/media/: jitter.rs
crates/rsiprtp/src/media/codec/: mod.rs
crates/rsiprtp/src/rtp/: rtcp.rs  session.rs
crates/rsiprtp/src/sdp/: builder.rs  ice_attrs.rs  mod.rs  negotiation.rs
crates/rsiprtp/src/session/: manager.rs
crates/rsiprtp/src/sip/: auth.rs  headers.rs  message.rs  mod.rs  uri.rs
crates/rsiprtp/src/sip/parser/: framing.rs  header.rs
crates/rsiprtp/src/sip/parser/typed/: contact.rs  cseq.rs  mod.rs  via.rs
crates/rsiprtp/src/sip/tests/: rfc3261.rs
crates/rsiprtp/src/srtp/: sdes.rs
crates/rsiprtp/src/transaction/: manager.rs
crates/rsiprtp/src/transaction/client/: invite.rs  non_invite.rs
crates/rsiprtp/src/transaction/server/: invite.rs  non_invite.rs
crates/rsiprtp/src/transaction/tests/: rfc3261_state_machines.rs
crates/rsiprtp/src/transport/: keepalive.rs  mod.rs  tcp.rs  tls.rs  udp.rs
crates/rsiprtp/tests/: allocations_sip_parse.rs  builder_roundtrip.rs  coverage_instantiations.rs  fuzz_inventory.rs  parser_diff.rs  parser_roundtrip.rs  prack.rs  proptest_sdp_session.rs  proptest_sip_message.rs  proptest_sip_typed.rs  via_roundtrip.rs
crates/rsiprtp/tests/baresip_integration/framework/: config.rs
crates/rsiprtp/tests/baresip_integration/scenarios/: security.rs
crates/rsiprtp/tests/fixtures/rfc4475/: README.md
crates/rsiprtp/tests/parser_diff_oracle/: mod.rs
crates/rsiprtp/tests/via_roundtrip_oracle/: mod.rs
docker/: docker-compose.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: g711_decode.rs  g722_decode.rs  jitter_push.rs  opus_decode.rs  rtcp_compound.rs  sip_contact.rs  sip_cseq.rs  sip_message_parse_diff.rs  sip_name_addr.rs  sip_via_typed.rs  srtcp_unprotect.rs  srtp_unprotect.rs
tools/full_test/: Cargo.toml
tools/full_test/src/: main.rs
wrk_docs/: 2025.12.06 - ralph prompt - baresip integration tests.md  2025.12.07 - ralph prompt - extended sip testing.md  2025.12.07 - ralph prompt - production test coverage.md  2025.12.08 - integration_tests_summary.md  2025.12.08 - ralph prompt - integration and e2e testing.md  2025.12.13 - CR - gabby code review.md  2025.12.13 - CR - gabby review plan.md  2025.12.13 - ralph prompt - gabby code review fixes.md  2025.12.13 - ralph prompt - gabby voice ai agent.md  2026.01.01 - CC - Coverage Analysis Report.md  2026.01.01 - CC - Coverage Improvement Plan.md  2026.04.29 - Briefing - CongestionController to codec bitrate bridge.md  2026.04.29 - HLD - Opus codec ropus 0.12 swap with typed runtime API.md  2026.04.30 - HLD - Production wiring for the bitrate bridge.md  2026.04.30 - Plan - Publishing prep remaining items.md  2026.05.01 - Brief - DTLS-SRTP decision.md  2026.05.01 - Brief - ICE wiring for CallManager.md  2026.05.02 - HLD - full_test runner - V2.md  2026.05.02 - HLD - full_test runner.md  2026.05.03 - HLD - sip-parser-rewrite.md  (+6 more)
(+79 files in other folders)
