[workspace]
resolver = "2"
members = [
    "crates/mdsiprtp-core",
    "crates/mdsiprtp-sip",
    "crates/mdsiprtp-transaction",
    "crates/mdsiprtp-dialog",
    "crates/mdsiprtp-transport",
    "crates/mdsiprtp-sdp",
    "crates/mdsiprtp-rtp",
    "crates/mdsiprtp-srtp",
    "crates/mdsiprtp-ice",
    "crates/mdsiprtp-media",
    "crates/mdsiprtp-session",
    "crates/mdsiprtp",
    "crates/gabby",
]
# gabby is excluded from default builds because it requires the Vosk native
# library. Build it explicitly with `cargo build -p gabby` once VOSK_LIB_DIR
# is set (see crates/gabby/scripts/setup_windows.ps1).
default-members = [
    "crates/mdsiprtp-core",
    "crates/mdsiprtp-sip",
    "crates/mdsiprtp-transaction",
    "crates/mdsiprtp-dialog",
    "crates/mdsiprtp-transport",
    "crates/mdsiprtp-sdp",
    "crates/mdsiprtp-rtp",
    "crates/mdsiprtp-srtp",
    "crates/mdsiprtp-ice",
    "crates/mdsiprtp-media",
    "crates/mdsiprtp-session",
    "crates/mdsiprtp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Martin Davidson <martingdavidson@gmail.com>"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# SIP parsing
rsip = "0.4"

# RTP/RTCP (Phase 1 uses simplified custom impl, Phase 2+ uses these)
# webrtc-rtp = "0.10"
# webrtc-rtcp = "0.11"

# Audio codecs
audio-codec-algorithms = "0.7"
ezk-g722 = "0.1"
ropus = "0.11"

# Audio processing
dasp = { version = "0.11", features = ["signal", "slice", "ring_buffer"] }

# Concurrency
crossbeam = "0.8"

# Error handling
thiserror = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"

# Utilities
bytes = "1"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
md5 = "0.7"
hex = "0.4"

# TLS
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "logging", "tls12"] }
rustls-pemfile = "2"
webpki-roots = "0.26"

# Cryptography
aes = "0.8"
ctr = "0.9"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
base64 = "0.22"

# Internal crates
mdsiprtp-core = { path = "crates/mdsiprtp-core" }
mdsiprtp-sip = { path = "crates/mdsiprtp-sip" }
mdsiprtp-transaction = { path = "crates/mdsiprtp-transaction" }
mdsiprtp-dialog = { path = "crates/mdsiprtp-dialog" }
mdsiprtp-transport = { path = "crates/mdsiprtp-transport" }
mdsiprtp-sdp = { path = "crates/mdsiprtp-sdp" }
mdsiprtp-rtp = { path = "crates/mdsiprtp-rtp" }
mdsiprtp-srtp = { path = "crates/mdsiprtp-srtp" }
mdsiprtp-ice = { path = "crates/mdsiprtp-ice" }
mdsiprtp-media = { path = "crates/mdsiprtp-media" }
mdsiprtp-session = { path = "crates/mdsiprtp-session" }
