[workspace]
resolver = "2"
members = [
    "crates/rsiprtp-core",
    "crates/rsiprtp-sip",
    "crates/rsiprtp-transaction",
    "crates/rsiprtp-dialog",
    "crates/rsiprtp-transport",
    "crates/rsiprtp-sdp",
    "crates/rsiprtp-rtp",
    "crates/rsiprtp-srtp",
    "crates/rsiprtp-ice",
    "crates/rsiprtp-media",
    "crates/rsiprtp-session",
    "crates/rsiprtp",
    "crates/gabby",
]
# gabby is excluded from default builds because it requires the Vosk native
# library. Build it explicitly with `cargo build -p gabby` once VOSK_LIB_DIR
# is set (see crates/gabby/scripts/setup_windows.ps1).
default-members = [
    "crates/rsiprtp-core",
    "crates/rsiprtp-sip",
    "crates/rsiprtp-transaction",
    "crates/rsiprtp-dialog",
    "crates/rsiprtp-transport",
    "crates/rsiprtp-sdp",
    "crates/rsiprtp-rtp",
    "crates/rsiprtp-srtp",
    "crates/rsiprtp-ice",
    "crates/rsiprtp-media",
    "crates/rsiprtp-session",
    "crates/rsiprtp",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
authors = ["Martin Davidson <martingdavidson@gmail.com>"]
repository = "https://github.com/0x4D44/rsiprtp"
homepage = "https://github.com/0x4D44/rsiprtp"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# SIP parsing
rsip = "0.4"

# RTP/RTCP (Phase 1 uses simplified custom impl, Phase 2+ uses these)
# webrtc-rtp = "0.10"
# webrtc-rtcp = "0.11"

# Audio codecs
audio-codec-algorithms = "0.7"
ezk-g722 = "0.1"
ropus = "0.12"

# Audio processing
dasp = { version = "0.11", features = ["signal", "slice", "ring_buffer"] }

# Concurrency
crossbeam = "0.8"

# Error handling
thiserror = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"

# Utilities
bytes = "1"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
md5 = "0.7"
hex = "0.4"

# TLS
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "logging", "tls12"] }
rustls-pemfile = "2"
webpki-roots = "0.26"

# Cryptography
aes = "0.8"
ctr = "0.9"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
base64 = "0.22"

# Internal crates — versions match workspace.package.version so all 11
# crates publish atomically. Bump the workspace version when releasing.
rsiprtp-core = { path = "crates/rsiprtp-core", version = "0.2.0" }
rsiprtp-sip = { path = "crates/rsiprtp-sip", version = "0.2.0" }
rsiprtp-transaction = { path = "crates/rsiprtp-transaction", version = "0.2.0" }
rsiprtp-dialog = { path = "crates/rsiprtp-dialog", version = "0.2.0" }
rsiprtp-transport = { path = "crates/rsiprtp-transport", version = "0.2.0" }
rsiprtp-sdp = { path = "crates/rsiprtp-sdp", version = "0.2.0" }
rsiprtp-rtp = { path = "crates/rsiprtp-rtp", version = "0.2.0" }
rsiprtp-srtp = { path = "crates/rsiprtp-srtp", version = "0.2.0" }
rsiprtp-ice = { path = "crates/rsiprtp-ice", version = "0.2.0" }
rsiprtp-media = { path = "crates/rsiprtp-media", version = "0.2.0" }
rsiprtp-session = { path = "crates/rsiprtp-session", version = "0.2.0" }
