[workspace]
resolver = "2"
members = [
    "crates/rsiprtp",
    "crates/gabby",
]
# gabby is excluded from default builds because it requires the Vosk native
# library. Build it explicitly with `cargo build -p gabby` once VOSK_LIB_DIR
# is set (see crates/gabby/scripts/setup_windows.ps1).
default-members = [
    "crates/rsiprtp",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
authors = ["Martin Davidson <martingdavidson@gmail.com>"]
repository = "https://github.com/0x4D44/rsiprtp"
homepage = "https://github.com/0x4D44/rsiprtp"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(coverage)", "cfg(coverage_nightly)"] }

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# SIP parsing
rsip = "0.4"

# Audio codecs
audio-codec-algorithms = "0.7"
ezk-g722 = "0.1"
ropus = "0.12"

# Error handling
thiserror = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"

# Utilities
bytes = "1"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
md5 = "0.7"
hex = "0.4"

# TLS
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "logging", "tls12"] }
rustls-pemfile = "2"
webpki-roots = "0.26"

# DNS
hickory-resolver = "0.24"

# Cryptography
aes = "0.8"
ctr = "0.9"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
base64 = "0.22"
