[package]
name = "gabby"
version = "0.1.0"
edition = "2021"
description = "Voice AI SIP agent - talk to an AI over the phone"
license = "MIT"

[[bin]]
name = "gabby"
path = "src/main.rs"

[dependencies]
# Internal crates
mdsiprtp = { path = "../mdsiprtp" }

# Async runtime
tokio = { version = "1", features = ["full", "signal", "process"] }

# Speech-to-Text
vosk = "0.3"

# HTTP client for Ollama (use rustls to avoid openssl dependency)
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio resampling
rubato = "0.15"

# CLI
clap = { version = "4", features = ["derive"] }

# Configuration
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"

# Async utilities
futures = "0.3"
async-stream = "0.3"

# Byte handling
bytes = "1"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Random numbers
rand = "0.8"
