[package]
name = "mdsiprtp-rtp"
description = "RTP/RTCP packet handling"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
mdsiprtp-core.workspace = true
thiserror.workspace = true
bytes.workspace = true
rand.workspace = true
tracing.workspace = true

[dev-dependencies]
tracing-subscriber = "0.3"
