[package]
name = "mdsiprtp-srtp"
description = "SRTP encryption for secure RTP media"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
mdsiprtp-core.workspace = true
mdsiprtp-rtp.workspace = true

# Cryptography
aes = "0.8"
ctr = "0.9"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
base64 = "0.22"

# DTLS
openssl = { version = "0.10", optional = true }

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true

# Utilities
bytes.workspace = true
rand.workspace = true

[features]
default = []
dtls = ["openssl"]
