[package]
name = "mdsiprtp"
description = "SIP/RTP stack for Rust - VoIP and AI agent applications"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
mdsiprtp-core.workspace = true
mdsiprtp-sip.workspace = true
mdsiprtp-transaction.workspace = true
mdsiprtp-dialog.workspace = true
mdsiprtp-transport.workspace = true
mdsiprtp-sdp.workspace = true
mdsiprtp-rtp.workspace = true
mdsiprtp-media.workspace = true
mdsiprtp-session.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tracing-subscriber = "0.3"
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"

[[example]]
name = "basic_call"
path = "examples/basic_call.rs"

[[example]]
name = "voicemail"
path = "examples/voicemail.rs"

[[example]]
name = "ai_bridge"
path = "examples/ai_bridge.rs"
