[package]
name = "rsiprtp-core"
description = "Core types, errors, and configuration for rsiprtp SIP/RTP stack"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
rand.workspace = true

[dev-dependencies]
serde_json.workspace = true
