[package]
name = "rsiprtp-ice"
description = "STUN/ICE implementation for NAT traversal"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
rsiprtp-core.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
bytes.workspace = true
rand.workspace = true
hmac.workspace = true
sha1.workspace = true
md5.workspace = true

[dev-dependencies]
tracing-subscriber = "0.3"
