[package]
name = "rsiprtp-media"
description = "Audio codecs, jitter buffer, and mixing"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
rsiprtp-core.workspace = true
rsiprtp-rtp.workspace = true
audio-codec-algorithms.workspace = true
ezk-g722.workspace = true
ropus = { workspace = true, optional = true }
dasp.workspace = true
crossbeam.workspace = true
thiserror.workspace = true
tracing.workspace = true

[features]
default = []
opus = ["ropus"]
