[package]
name = "rsiprtp-sip"
description = "SIP message parsing and building for rsiprtp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
rsiprtp-core.workspace = true
rsip.workspace = true
thiserror.workspace = true
bytes.workspace = true
uuid.workspace = true
md5.workspace = true
sha2.workspace = true
hex.workspace = true
rand.workspace = true
