[package]
name = "rsiprtp-transport"
description = "Network transport layer for SIP (UDP/TCP/TLS)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
rsiprtp-core.workspace = true
rsiprtp-sip.workspace = true
tokio = { workspace = true, features = ["net", "sync", "rt", "macros", "io-util"] }
thiserror.workspace = true
tracing.workspace = true
bytes.workspace = true

# TLS
tokio-rustls.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
webpki-roots.workspace = true

# DNS
hickory-resolver = "0.24"

[dev-dependencies]
rcgen = "0.13"
tempfile = "3"
tracing-subscriber = "0.3"
rsa = "0.9"
p256 = "0.13"
rand = "0.8"
