[package]
name = "rsiprtp"
description = "Modular SIP/RTP communications stack for Rust with Sans-IO state machines"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/rsiprtp"
readme = "../../README.md"
keywords = ["sip", "rtp", "voip", "telephony", "sans-io"]
categories = ["network-programming", "multimedia"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
rsiprtp-core.workspace = true
rsiprtp-sip.workspace = true
rsiprtp-transaction.workspace = true
rsiprtp-dialog.workspace = true
rsiprtp-transport.workspace = true
rsiprtp-sdp.workspace = true
rsiprtp-rtp.workspace = true
rsiprtp-media.workspace = true
rsiprtp-session.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tracing-subscriber = "0.3"
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"

[[example]]
name = "basic_call"
path = "examples/basic_call.rs"

[[example]]
name = "voicemail"
path = "examples/voicemail.rs"

[[example]]
name = "ai_bridge"
path = "examples/ai_bridge.rs"
