[package]
name = "full_test"
description = "Internal dev runner: orchestrates fmt, clippy, deny, audit, tests, doc, and coverage; emits a self-contained HTML report"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
chrono = "0.4"
