[package]
name = "rsiprtp-sip-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

# Standalone manifest: cargo-fuzz crates must not be part of the parent
# workspace because they need their own (sanitizer-instrumented) build.
[workspace]

[dependencies]
libfuzzer-sys = "0.4"
rsiprtp-sip = { path = ".." }

[[bin]]
name = "parse_sip_message"
path = "fuzz_targets/parse_sip_message.rs"
test = false
doc = false
bench = false
